# DFAT

./: Calibration_Simple_Test.ipynb  Calibration_Simple_Test_2Targets.ipynb  FASSSTER3.ipynb  FASSSTER3_v2.ipynb  FASSSTER3_v4.ipynb  InfectionsData_060120_093020.xlsx  NCRdata_2021.xlsx  P1-SEIQR-Strat.ipynb  P1-SEIQR-StratInf-LongerCalibration.ipynb  P1-SEIQR-StratInf-Optimization.ipynb  P1-SEIQR-StratInf.ipynb  P1-SEIQR.ipynb  P1-SEIQR_Chained-Optimization.ipynb  P1-SEIQR_Chained-OptimizationV2.ipynb  P1-SIR.ipynb  P2-SEIR.ipynb  StratInf + Age + Vaccination + Data (MLE Only).ipynb
organized/: main_notebook.ipynb  pyproject.toml  visualizing_mixing_matrices.ipynb
organized/data/: Notifications_Data_030820-123120.xlsx
organized/data/mixing_matrices/: Conmat_implentation - R Console.txt  NCR Age Distribution.xlsx
organized/data/mixing_matrices/12_year_bands/: synthetic_mixing_ncr_home.csv  synthetic_mixing_ncr_other.csv  synthetic_mixing_ncr_school.csv  synthetic_mixing_ncr_work.csv
organized/data/mixing_matrices/6_year_bands/: synthetic_mixing_ncr_all-no_school.csv  synthetic_mixing_ncr_all.csv  synthetic_mixing_ncr_home.csv  synthetic_mixing_ncr_other.csv  synthetic_mixing_ncr_school.csv  synthetic_mixing_ncr_work.csv
organized/main/: helper.py  model.py  target_data.py
organized/tests/: Testing Compartmental Structures IQR.ipynb  Testing Compartmental Structures.ipynb
